devel
-----

* Added authenticate header to the HTTP response when status code is 401 
  for HTTP/2.

* Best quality spam pushed down to DEBUG.

* Updated arangosync to v2.12.0-preview-13.

* Implement prefetch for revision trees, in case a batch is created with
  a distinguished collection as for `SynchronizeShard`. This ensures that
  the revision tree for the batch will be available when needed, even though
  the revision tree for the collection might already have advanced beyond
  the sequence number of the snapshot in the batch. This ensures that
  shards can get in sync more reliably and more quickly.

* Fixed log with json format not respecting the value of parameter 
  `--log.shorten-filenames`.

* Updated arangosync to v2.12.0-preview-12.

* Added "intermediateCommits" statistics return value for AQL queries, to
  relay the number of intermediate commits back that a write query performed.

* Updated ArangoDB Starter to 0.15.5-preview-3.

* Fixed a rare occuring issue where paths inside a DisjointSmart traversal
  containing only satellite relevant nodes were not returned properly 
  (ES-1265).

* Fixed BTS-926: UI showing the "create index" form to non-admin users.

* Updated Views UI with all changes necessary for the 3.10.0 launch.

* Added message on the UI view of Logs when the user has restricted access,
  either because cannot access `_system`, or because is currently in 
  another database. 

* Fix for the Pregel's HITS algorithm using a fixed value instead of the
  passed "threshold" parameter. The same applied to the new HITSKleinberg.

* Do not drop follower shard after too many failed shard synchronization
  attempts.

* Added startup option `--arangosearch.skip-recovery` to skip the recovery 
  of arangosearch view links or inverted indexes.
  The startup option can be specified multiple times and is expected to either
  contain the string `all` (will skip the recovery for all view links and 